// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset orion-fusion-theme fieldset orion-fusion-theme"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field orion-fusion-theme field-inline precision"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Select a date precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError orion-fusion-theme"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-69"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-66 terra-select-screen-reader-display-67 terra-select-screen-reader-placeholder-68"
          aria-required="false"
          class="select default orion-fusion-theme"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-66"
            >
              Select a date precision
            </span>
            <span
              id="terra-select-screen-reader-description-69"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date precision"
            class="display"
            role="textbox"
          >
            <div
              class="placeholder"
              id="terra-select-screen-reader-placeholder-68"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field orion-fusion-theme field-inline granularity"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Select a date granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError orion-fusion-theme"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-74"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-71 terra-select-screen-reader-display-72 terra-select-screen-reader-placeholder-73"
          aria-required="false"
          class="select default orion-fusion-theme"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-71"
            >
              Select a date granularity
            </span>
            <span
              id="terra-select-screen-reader-description-74"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date granularity"
            class="display"
            role="textbox"
          >
            <div
              class="placeholder"
              id="terra-select-screen-reader-placeholder-73"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div />
    </div>
  </fieldset>
</div>
`;

exports[`should render a default onset picker with specified onset date 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Select a date precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-4"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-1 terra-select-screen-reader-display-2 terra-select-screen-reader-placeholder-3"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-1"
            >
              Select a date precision
            </span>
            <span
              id="terra-select-screen-reader-description-4"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date precision"
            class="display"
            role="textbox"
          >
            <div
              class="placeholder"
              id="terra-select-screen-reader-placeholder-3"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Select a date granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-9"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-6 terra-select-screen-reader-display-7 terra-select-screen-reader-placeholder-8"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-6"
            >
              Select a date granularity
            </span>
            <span
              id="terra-select-screen-reader-description-9"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date granularity"
            class="display"
            role="textbox"
          >
            <div
              class="placeholder"
              id="terra-select-screen-reader-placeholder-8"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div />
    </div>
  </fieldset>
</div>
`;

exports[`should render only a select when supplied with the UNKNOWN precision 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Select a date precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-14"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-11 terra-select-screen-reader-display-12 terra-select-screen-reader-placeholder-13"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-11"
            >
              Select a date precision
            </span>
            <span
              id="terra-select-screen-reader-description-14"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date precision"
            class="display"
            role="textbox"
          >
            <span
              id="terra-select-screen-reader-display-12"
            >
              Unknown
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`should render only the supplied precisions 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Select a date precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-59"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-56 terra-select-screen-reader-display-57 terra-select-screen-reader-placeholder-58"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-56"
            >
              Select a date precision
            </span>
            <span
              id="terra-select-screen-reader-description-59"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date precision"
            class="display"
            role="textbox"
          >
            <div
              class="placeholder"
              id="terra-select-screen-reader-placeholder-58"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Select a date granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-64"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-61 terra-select-screen-reader-display-62 terra-select-screen-reader-placeholder-63"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-61"
            >
              Select a date granularity
            </span>
            <span
              id="terra-select-screen-reader-description-64"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date granularity"
            class="display"
            role="textbox"
          >
            <div
              class="placeholder"
              id="terra-select-screen-reader-placeholder-63"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div />
    </div>
  </fieldset>
</div>
`;

exports[`should render the same when onChange function is supplied 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Select a date precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-49"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-46 terra-select-screen-reader-display-47 terra-select-screen-reader-placeholder-48"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-46"
            >
              Select a date precision
            </span>
            <span
              id="terra-select-screen-reader-description-49"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date precision"
            class="display"
            role="textbox"
          >
            <div
              class="placeholder"
              id="terra-select-screen-reader-placeholder-48"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Select a date granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-54"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-51 terra-select-screen-reader-display-52 terra-select-screen-reader-placeholder-53"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-51"
            >
              Select a date granularity
            </span>
            <span
              id="terra-select-screen-reader-description-54"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date granularity"
            class="display"
            role="textbox"
          >
            <div
              class="placeholder"
              id="terra-select-screen-reader-placeholder-53"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div />
    </div>
  </fieldset>
</div>
`;

exports[`should render with age inputs filled in when supplied 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Select a date precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-34"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-31 terra-select-screen-reader-display-32 terra-select-screen-reader-placeholder-33"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-31"
            >
              Select a date precision
            </span>
            <span
              id="terra-select-screen-reader-description-34"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date precision"
            class="display"
            role="textbox"
          >
            <span
              id="terra-select-screen-reader-display-32"
            >
              Before
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Select a date granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-39"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-36 terra-select-screen-reader-display-37 terra-select-screen-reader-placeholder-38"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-36"
            >
              Select a date granularity
            </span>
            <span
              id="terra-select-screen-reader-description-39"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date granularity"
            class="display"
            role="textbox"
          >
            <span
              id="terra-select-screen-reader-display-37"
            >
              Age
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div>
        <div
          class="field field-inline age"
        >
          <div
            class="label-group label-group-hidden"
          >
            <label
              class="label"
              for="test-age-input"
              id="test-age-input-label"
            >
              Enter an age
            </label>
            <div
              class="error-icon-hidden"
            >
              <svg
                class="tui-Icon icon IconError"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                  fill="#E50000"
                />
                <path
                  d="M7 21.5h34v5H7v-5z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <input
            aria-labelledby="test-age-input-label"
            class="form-input"
            id="test-age-input"
            max="6"
            min="0"
            step="1"
            type="number"
            value="3"
          />
        </div>
        <div
          class="field field-inline age-unit"
        >
          <div
            class="label-group label-group-hidden"
          >
            <label
              class="label"
              for="test-age-unit-select"
              id="test-age-unit-select-label"
            >
              Select an age precision
            </label>
            <div
              class="error-icon-hidden"
            >
              <svg
                class="tui-Icon icon IconError"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                  fill="#E50000"
                />
                <path
                  d="M7 21.5h34v5H7v-5z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <div
            aria-describedby="terra-select-screen-reader-description-44"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            aria-labelledby="terra-select-screen-reader-label-41 terra-select-screen-reader-display-42 terra-select-screen-reader-placeholder-43"
            aria-required="false"
            class="select default"
            data-terra-select="true"
            data-terra-select-combobox="true"
            id="test-age-unit-select"
            role="combobox"
            tabindex="0"
          >
            <div
              class="visually-hidden-component"
              hidden=""
            >
              <span
                id="terra-select-screen-reader-label-41"
              >
                Select an age precision
              </span>
              <span
                id="terra-select-screen-reader-description-44"
              >
                List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
              </span>
            </div>
            <div
              aria-label="Select an age precision"
              class="display"
              role="textbox"
            >
              <span
                id="terra-select-screen-reader-display-42"
              >
                Year(s)
              </span>
            </div>
            <div
              class="toggle"
              data-terra-form-select-toggle="true"
            >
              <span
                class="arrow-icon"
              />
            </div>
            <span
              aria-atomic="true"
              aria-live="assertive"
              aria-relevant="additions text"
              class="visually-hidden-component"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`should render with non default inputs when supplied 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Select a date precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-19"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-16 terra-select-screen-reader-display-17 terra-select-screen-reader-placeholder-18"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-16"
            >
              Select a date precision
            </span>
            <span
              id="terra-select-screen-reader-description-19"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date precision"
            class="display"
            role="textbox"
          >
            <span
              id="terra-select-screen-reader-display-17"
            >
              Before
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group label-group-hidden"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Select a date granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-24"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-labelledby="terra-select-screen-reader-label-21 terra-select-screen-reader-display-22 terra-select-screen-reader-placeholder-23"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-21"
            >
              Select a date granularity
            </span>
            <span
              id="terra-select-screen-reader-description-24"
            >
              List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Select a date granularity"
            class="display"
            role="textbox"
          >
            <span
              id="terra-select-screen-reader-display-22"
            >
              Year
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions text"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div>
        <div
          class="field field-inline year"
        >
          <div
            class="label-group label-group-hidden"
          >
            <label
              class="label"
              for="test-year-select"
              id="test-year-select-label"
            >
              Select a year
            </label>
            <div
              class="error-icon-hidden"
            >
              <svg
                class="tui-Icon icon IconError"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                  fill="#E50000"
                />
                <path
                  d="M7 21.5h34v5H7v-5z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <div
            aria-describedby="terra-select-screen-reader-description-29"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            aria-labelledby="terra-select-screen-reader-label-26 terra-select-screen-reader-display-27 terra-select-screen-reader-placeholder-28"
            aria-required="false"
            class="select default"
            data-terra-select="true"
            data-terra-select-combobox="true"
            id="test-year-select"
            role="combobox"
            tabindex="0"
          >
            <div
              class="visually-hidden-component"
              hidden=""
            >
              <span
                id="terra-select-screen-reader-label-26"
              >
                Select a year
              </span>
              <span
                id="terra-select-screen-reader-description-29"
              >
                List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
              </span>
            </div>
            <div
              aria-label="Select a year"
              class="display"
              role="textbox"
            >
              <span
                id="terra-select-screen-reader-display-27"
              >
                2014
              </span>
            </div>
            <div
              class="toggle"
              data-terra-form-select-toggle="true"
            >
              <span
                class="arrow-icon"
              />
            </div>
            <span
              aria-atomic="true"
              aria-live="assertive"
              aria-relevant="additions text"
              class="visually-hidden-component"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
